--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,10 @@
     "express": "^4.16.2",
     "gsap": "^2.0.2",
     "isomorphic-unfetch": "^2.0.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.mapvalues": "^4.6.0",
+    "lodash.throttle": "^4.1.1",
+    "lodash.tonumber": "^4.0.3",
     "next": "^7.0.2",
     "react": "^16.0.0",
     "react-emotion": "^9.2.12",
