--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "emotion": "^9.2.12",
     "express": "^4.16.2",
+    "flickity": "^2.1.2",
     "gsap": "^2.0.2",
     "isomorphic-unfetch": "^2.0.0",
     "lodash.debounce": "^4.0.8",
