--- a/wordpress/.htaccess
+++ b/wordpress/.htaccess
@@ -1,3 +1,9 @@
 php_value upload_max_filesize 12M
 php_value post_max_size 13M
 php_value memory_limit 15M
+
+<IfModule mod_rewrite.c>
+  AddType video/ogg .ogv
+  AddType video/webm .webm
+  AddType video/mp4 .mp4
+</IfModule>
